--- a/html/user.html
+++ b/html/user.html
@@ -93,44 +93,12 @@
 		</footer>
 
 		<script type="text/javascript" src="./static/js/web3/web3.min.js"></script>
-		<script type="text/javascript" src="./static/js/app/abi/exoticABI.js"></script>
-		<script type="text/javascript" src="./static/js/app/abi/oracleABI.js"></script>
 
 		<script>
 			async function init(){
-				const app = await import("./static/js/app/app.js");
 				const user = await import("./static/js/app/user.js");
-				const exoticContract = {address: "0x204AA0cC951D38A8E12a1CF70B220c2555c9A016", abi: exoticABI};
-				const userSearchButton = document.getElementById('userSearchButton');
 
-				async function populateUserData(addr) {
-					const filter = {user: addr };
-
-					return app.eventData(exoticContract, "UserAction", filter)
-						.then( (results) => {
-							return results;
-						});
-				}
-
-				async function searchUser(){
-					// get user address
-					const userAddress = "0xDdb291a72e9005bFB2c2F44Aca6bA5047318fd2D";
-					const userData = await populateUserData(userAddress);
-					const dataContainer = document.getElementById("dataContainer");
-
-					// build table with data
-					await user.load(userData.reverse());
-
-					// disable
-					// userSearchButton.disabled = true;
-
-				}
-
-				// enable button
-				userSearchButton.disabled = false;
-				userSearchButton.onclick = searchUser;
-
-				// wait for click
+				user.load();
 			}
 
 			init();
