--- a/html/markets.html
+++ b/html/markets.html
@@ -37,8 +37,8 @@
 		<main>
 			<div class="main-wrapper">
 				<div id="aboutContainer" class="about-display">
-					<h3>This project allows for the creation of decentralized exotic prediction markets where users can bet on whether a certain on-chain oracle value will be over or under a predefined value after the completion time. This project leverages a smart contract to handle predictions and the iExec Oracle Factory for oracle results. </h3>
-					<h3>The ERC-1155 smart contract acts as the market creator and escrow to hold collateral for each market. When a user places a bet they are issued tokens tied to that specific market and bet. After a market closes and the oracle value is verified, the user can swap their winning tokens for the appropriate percentage of the total market pool. </h3>
+					<h3>This project allows for the creation of decentralized exotic prediction markets where users can predict whether a certain on-chain oracle value will be over or under a predefined value after the decision time. This project leverages a smart contract to handle predictions and the iExec Oracle Factory for oracle results. </h3>
+					<h3>The ERC-1155 smart contract acts as the market creator and escrow to hold collateral for each market. When a user makes a prediction they are issued tokens tied to that specific market and outcome. After a market closes and the oracle value is verified, the user can swap their winning tokens for the appropriate percentage of the total market pool. </h3>
 				</div>
 
 				<div class="input-container">
@@ -73,9 +73,7 @@
 
 				<div class="footer-center">
 					<div>
-						<a class="iexec-link" href="./markets.html">
-						<h2>/home</h2>
-						</a>
+
 					</div>
 				</div>
 
