--- a/html/readme.html
+++ b/html/readme.html
@@ -85,8 +85,6 @@
 					<li>Market pool drain can happen any time after June 4, 2022 where market creator can empty what is left in the market pool</li>
 					<li>all time offsets (drain offset, refund offset ...) can be changed by the contract owner</li>
 					</br>
-					<h3>betting in this format favors users that bid at the last moment for certain markets</h3>
-					<h3>this is why a limit on shares and trading of shares may be introduced in v2</h3>
 
 					<h2>see the github README.txt for more information</h2>
 				</div>
@@ -108,7 +106,7 @@
 				<div class="footer-center">
 					<div>
 						<a class="iexec-link" href="./markets.html">
-						<h2>/home</h2>
+						<h2>home</h2>
 						</a>
 					</div>
 				</div>
